# GenericBnP

./: .gitignore  Cargo.toml  Readme.md  shell.nix
src/: lib.rs
src/generic_master_problem/: branch.rs  column_pool.rs  mod.rs
src/misc/: blocking_queue.rs  hashmap.rs  mod.rs
src/solvers/: gurobi.rs  mod.rs
src/ui/: mod.rs
tests/: cutting_stock.rs
