[package]
name = "generic-bnp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twox-hash = "1.6.3"
binary-heap-plus = "0.5.0"
compare = "0.1.0"
console = "0.15.7"
itertools = "0.11.0"
nohash-hasher = "0.2.0"

gurobi = { version = "0.3.4", optional = true}

[features]


disable_ui = []
buffered_out = []
locked_out = []
branch-graphviz = []

validity_assertions = []
default = [ "gurobi" ]

