[package]
name = "generic-bnp"
description = "GenericBnP is a Branch & Price library for the programming language Rust. It supports custom cuts, dual stabilization, primal heuristics, and multithreaded evaluation."
license = "AGPL-3.0-or-later"
repository = "https://github.com/gregod/GenericBnP"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twox-hash = "1.6.3"
binary-heap-plus = "0.5.0"
compare = "0.1.0"
console = "0.15.7"
itertools = "0.11.0"
nohash-hasher = "0.2.0"

gurobi = { version = "0.3.4", optional = true}

[features]

# Related to UI
disable_ui = []
buffered_out = []
locked_out = []
branch-graphviz = []

# Expensive validity checks
validity_assertions = []

default = [ "gurobi" ]

